# rdk-storagemanager

./: CONTRIBUTING.md  Doxyfile  Makefile.am  configure.ac  disk-check.conf  env.sh  env_stm.sh  nvram.conf  rdk_build.sh  rdk_env.xml  storagemanager.pc.in  storagemgrmain.service
cfg/: Makefile.am
conf/: storageMgr.conf
refactored/: Makefile.am
refactored/include/: rdkStorageMgr.h  rdkStorageMgrLogger.h  rdkStorageMgrTypes.h
refactored/main/: Makefile.am  main.cpp
refactored/mgr/: Makefile.am  rdkStorage.cpp  rdkStorageBase.cpp  rdkStorageBase.h  rdkStorageHardDisk.cpp  rdkStorageHardDisk.h  rdkStorageMain.cpp  rdkStorageMain.h  rdkStorageNVRAM.cpp  rdkStorageNVRAM.h  rdkStorageSDCard.cpp  rdkStorageSDCard.h  rdkStorageeMMC.cpp  rdkStorageeMMC.h  smartmonUtiles.cpp  smartmonUtiles.h
refactored/rpc/: Makefile.am  rdkStorageMgr_iarm_external.cpp  rdkStorageMgr_iarm_internal.cpp  rdkStorageMgr_iarm_private.h
refactored/test/: Makefile.am  rdkStorageTest.cpp
src/: Makefile.am
src/rpc/: Makefile.am
src/rpc/include/: storageMgr.h  storageMgrInternal.h
src/rpc/src/: storageMgr.cpp  storageMgrMain.cpp
src/utils/: Makefile.am
src/utils/include/: harddiskMgr.h  sdCardReader.h  smartcmd_executor.h  udevUtils.h
src/utils/src/: harddiskMgr.cpp  sdCardReader.cpp  smartcmd_executor.cpp  udevUtils.cpp
test/: Makefile.am  storageMgrClient.cpp
